# fiap-04-nexovital-ai

./: .env.example  .gitignore  NEXOVITAL_AI_MVP_SPEC.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: containers.yml  deploy-azure.yml  frontend.yml  infra.yml  python.yml
backend/: Dockerfile  pyproject.toml
backend/app/: dependencies.py  graph.py  main.py  state.py
backend/app/analyzers/: audio.py  critical_terms.py  fusion.py  medications.py  text.py  video.py  vitals.py
backend/app/api/: analyze.py  demo_patients.py  health.py
backend/app/core/: config.py
backend/app/schemas/: analysis.py  patient.py
backend/app/services/: alert_webhook.py  anonymizer.py  openrouter_client.py
backend/tests/: test_analyze.py  test_demo_patients.py  test_fusion.py  test_health.py  test_medications.py  test_vitals.py
demo-data/patient-altered/: README.md  sample-audio-transcript.txt  sample-video-notes.txt  vitals.csv
demo-data/patient-healthy/: README.md  sample-audio-transcript.txt  sample-video-notes.txt  vitals.csv
demo-data/patient-neuro-no-history/: README.md  sample-audio-transcript.txt  sample-video-notes.txt
docs-avaliacao/: ARQUITETURA.md  CHECKLIST_AVALIACAO_IA.md  EVIDENCIAS_DO_CODIGO.md  GUIA_VIDEO_DEMONSTRACAO.md  MAPEAMENTO_REQUISITOS.md  README_AVALIACAO.md  RELATORIO_TECNICO.md
examples/prescriptions/: README.md  version-1.json  (+1 more)
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
infra/: README.md  main.bicep  main.json
(+30 files in other folders)
